# bloqade-lanes

./: .autotune.toml  .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  Cargo.toml  Ion.toml  README.md  book.toml  demo.py  index.html  justfile  pyproject.toml
.benchmarking/: routing_benchmark.py
crates/bloqade-lanes-bytecode-cli/: Cargo.toml  bloqade_lanes_bytecode.h  cbindgen.toml
crates/bloqade-lanes-bytecode-cli/src/: lib.rs  main.rs
crates/bloqade-lanes-bytecode-cli/src/ffi/: arch.rs  error.rs  handles.rs  memory.rs  program.rs  validate.rs
crates/bloqade-lanes-bytecode-cli/src/policy/: eval.rs  mod.rs  output.rs  trace.rs
crates/bloqade-lanes-bytecode-cli/tests/: c_api.rs  cli_integration.rs  cli_policy.rs
crates/bloqade-lanes-bytecode-cli/tests/fixtures/cli_policy/: halt_now.star  move_problem.json  target_problem.json
crates/bloqade-lanes-bytecode-core/: Cargo.toml
crates/bloqade-lanes-bytecode-core/src/: atom_state.rs  lib.rs  version.rs
crates/bloqade-lanes-bytecode-core/src/arch/: addr.rs  mod.rs  query.rs  types.rs  validate.rs
crates/bloqade-lanes-bytecode-core/src/bytecode/: encode.rs  instruction.rs  mod.rs  program.rs  text.rs  validate.rs
crates/bloqade-lanes-bytecode-core/src/isa/: def.rs  mod.rs  parse_helpers.rs  program.rs  text.rs  validate.rs
crates/bloqade-lanes-bytecode-core/src/vihaco_isa/: mod.rs  program.rs  validate.rs
crates/bloqade-lanes-dsl-core/: Cargo.toml
crates/bloqade-lanes-dsl-core/src/: adapter.rs  errors.rs  lib.rs  policy_trait.rs  sandbox.rs
crates/bloqade-lanes-dsl-core/src/primitives/: arch_spec.rs  mod.rs  move_set.rs  placement.rs  types.rs  utilities.rs
crates/bloqade-lanes-search/: .gitignore  Cargo.toml
crates/bloqade-lanes-search/examples/: compare_35q.rs
crates/bloqade-lanes-search/src/: aod_grid.rs  astar.rs  benchmark.rs  config.rs  context.rs  cost.rs  dsl.rs  entangling.rs  entropy.rs  expander.rs  frontier.rs  goals.rs  graph.rs  heuristic.rs  heuristic_expander.rs  heuristics.rs  lane_index.rs  lib.rs  nohome.rs  observer.rs  ordering.rs  receding_horizon.rs  solve.rs  target_generator.rs  test_utils.rs  traits.rs
crates/bloqade-lanes-search/src/drivers/: astar.rs  entropy.rs  frontier.rs  mod.rs  result.rs
crates/bloqade-lanes-search/src/dsl/: fixture.rs  pipeline.rs
crates/bloqade-lanes-search/src/dsl/move_policy_dsl/: actions.rs  builtins.rs  graph_handle.rs  kernel.rs  lib_move.rs  mod.rs  observer.rs
crates/bloqade-lanes-search/src/dsl/target_generator_dsl/: ctx_handle.rs  kernel.rs  mod.rs  observer.rs
crates/bloqade-lanes-search/src/generators/: cz_coordination.rs  entropy.rs  exhaustive.rs  greedy.rs  heuristic.rs  loose_target.rs  mod.rs  pipeline.rs
crates/bloqade-lanes-search/src/move_policy_dsl/: actions.rs  adapter_impl.rs  graph_handle.rs  kernel.rs  lib_move.rs  mod.rs  observer.rs
crates/bloqade-lanes-search/src/ops/: aod_grid.rs  entangling.rs  mod.rs
crates/bloqade-lanes-search/src/placement/: cz_placement.rs  loose_goal.rs  mod.rs  nohome.rs  receding_horizon.rs  single_heuristic.rs  target_generator.rs
crates/bloqade-lanes-search/src/primitives/: context.rs  distance.rs  graph.rs  lane_index.rs  mod.rs  ordering.rs  path.rs
crates/bloqade-lanes-search/src/scorers/: distance.rs  entropy.rs  mod.rs
crates/bloqade-lanes-search/src/search/: engine.rs  mod.rs  move_search.rs  options.rs  restarts.rs  result.rs  solve.rs  target_solver.rs
crates/bloqade-lanes-search/src/target_generator_dsl/: kernel.rs  lib_target.rs  mod.rs
crates/bloqade-lanes-search/tests/: dsl_determinism.rs  dsl_entropy_acid.rs  dsl_kernel_fallback.rs  dsl_kernel_insert_outcome.rs  dsl_kernel_schema.rs  dsl_params_override.rs  dsl_snapshot.rs  primer_golden.rs  temp_regression.rs
crates/bloqade-lanes-search/tests/fixtures/primer/: expected.md
crates/bloqade-lanes-search/tests/fixtures/primer/input/: actions.rs  graph_handle.rs  lib_move.rs  lib_target.rs
crates/bloqade-lanes-search/tests/temp_regression/: README.md  arch.json  generate_fixtures.py
crates/bloqade-lanes-search/tests/temp_regression/fixtures/: case_0001.json  case_0002.json  case_0003.json  case_0004.json  case_0005.json  case_0006.json  case_0007.json  case_0008.json  case_0009.json  case_0010.json  case_0011.json  case_0012.json  case_0013.json  case_0014.json  case_0015.json  case_0016.json  case_0017.json  case_0018.json  case_0019.json  case_0020.json  case_0021.json  case_0022.json  case_0023.json  case_0024.json  case_0025.json  case_0026.json  case_0027.json  case_0028.json  case_0029.json  case_0030.json  case_0031.json  case_0032.json  case_0033.json  case_0034.json  case_0035.json  case_0036.json  case_0037.json  case_0038.json  case_0039.json  case_0040.json  (+20 more)
demo/: README.md  __init__.py  arch_spec_geometry_demo.py  benchmark_decoders.ipynb  code_concatenation.ipynb  community_call_jan_28_2026.py  compare_injected_special_paths.ipynb  compare_injected_special_paths.py  congestion_aware_compare.py  congestion_aware_compile.py  cudaq_demo.py  distillation_sim_circuit_visualization.ipynb  error_detection_stdlib.ipynb  example_move_kernel.ipynb  explicit_allocation.py  ghz_moves_demo.py  hc_ansatz_gemini_physical.ipynb  injected_decoder_determinism.ipynb  logical_dialect_demo.ipynb  logical_dialect_demo.py  logical_new_at_demo.ipynb  logical_new_at_demo.py  logical_noise_metrology.ipynb  magic_state_distillation.ipynb  magic_state_distillation.py  magic_state_distillation_reprod.ipynb  magic_state_distillation_reprod.py  magic_state_distillation_reprod_coherr.ipynb  move_demo.py  move_lang.py  msd.ipynb  msd.py  msd_default_post_processing_diagnostic.ipynb  msd_demo.ipynb  msd_demo.py  msd_move_visualization.ipynb  msd_postselection_experiment.ipynb  msd_postselection_experiment.py  msd_postselection_experiment_old.py  msd_reprod.ipynb  (+39 more)
dev/: 404.html  index.html  print.html  searchindex.js  searchindex.json  versions.json
plans/: 2026-04-03-archspec-flair-bridge-design.md  2026-04-03-archspec-schema-update-design.md
policies/: primer.md
scripts/: deploy_docs.py  eval_pipeline.py  (+8 more)
(+3592 files in other folders)
