[workspace]
members = [
    "crates/bloqade-lanes-bytecode-core",
    "crates/bloqade-lanes-bytecode-python",
    "crates/bloqade-lanes-bytecode-cli",
    "crates/bloqade-lanes-dsl-core",
    "crates/bloqade-lanes-search",
]
resolver = "2"

[workspace.package]
version = "0.10.0-dev"

[workspace.dependencies]
# vihaco — virtual ISA + machine framework (QuEra, MIT).
# See https://github.com/QuEraComputing/bloqade-lanes/issues/769.
vihaco = "0.1"
vihaco-parser = "0.1"
vihaco-parser-core = "0.1"
chumsky = "0.10"
eyre = "0.6"
