[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bloqade-lanes"
version = "0.11.0-dev"
description = "Components for defining and manipulating lane-based structures in Bloqade for neutral atom quantum computing."
readme = "README.md"
authors = [
    { name = "Phillip Weinberg", email = "pweinberg@quera.com" }
]
dependencies = [
    "bloqade-circuit[qasm2]~=0.14.3",
    "bloqade-core~=0.6.4",
    "deprecated>=1.3.1",
    "kirin-toolchain~=0.22.6",
    "numpy>=2.2.6",
    "kahip>=3.25",
    "rustworkx>=0.17.1",
    "scipy>=1.15.3",
]
license = { file = "LICENSE" }
requires-python = ">= 3.10"

[project.optional-dependencies]
cudaq = [
    # CUDA-Q (and its cuda-quantum-cuNN backend) ships no Windows wheels, so
    # skip it there; --all-extras then resolves to empty on win32.
    "cudaq>=0.13.0; sys_platform != 'win32'",
    "qbraid-qir[squin]>=0.5.1; sys_platform != 'win32'",
]
sim = [
    "bloqade-circuit[cirq, tsim]~=0.14.1",
    "bloqade-tsim~=0.1.3",
]
visualization = [
    "matplotlib>=3.9.4",
    "scipy>=1.15.3",
    "pyqt5>=5.15.11;  sys_platform == 'darwin'",
    "pyqt5>=5.15.11;  sys_platform == 'linux'",
]
msd-reprod = [
    "bloqade-decoders[mle, mld]>=0.6.0",
    "clifft; python_version >= '3.12'",
    "ipywidgets"
]

[tool.maturin]
manifest-path = "crates/bloqade-lanes-bytecode-python/Cargo.toml"
module-name = "bloqade.lanes.bytecode._native"
python-source = "python"
python-packages = ["bloqade"]


[dependency-groups]
doc = [
    "griffe-kirin>=0.1.0",
    "griffe-inherited-docstrings>=1.1.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.27.0",
]
dev = [
    "black>=26.0.0",
    "maturin>=1.4,<2.0",
    "coverage>=7.6.4",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
    "ipython>=8.29.0",
    "isort>=5.13.2",
    "jupytext>=1.18.1",
    "mypy>=1.13.0",
    "numpy>=1.26.4",
    "pre-commit>=4.0.1",
    "pycobertura>=4.1.0",
    "pyinstrument>=5.1.2",
    "pyright[nodejs]>=1.1.408",
    "pyspy>=0.1.1",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "rust-just>=1.36.0",
    "ipykernel>=7.2.0",
    "pytest-mock>=3.15.1",
]

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
src_paths = ["python/bloqade"]

[tool.black]
line-length = 88

[tool.ruff]
# Match requires-python (>= 3.10): a py312 target makes ruff "modernize" code to
# 3.11/3.12-only constructs (datetime.UTC, typing.Self, PEP 695 generics) that
# break on the 3.10/3.11 the project still supports.
target-version = "py310"
# Hand-maintained type stub mirroring the Rust _native extension; it trips a
# large number of PYI/PIE rules that do not apply to a generated-style stub.
extend-exclude = ["python/bloqade/lanes/bytecode/_native.pyi"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = [
    # Import ordering is owned by the dedicated isort pre-commit hook (profile
    # black); leaving it to ruff too would make the two tools fight.
    "I001",
    # `from x import y as y` is the explicit re-export idiom pyright requires;
    # ruff would otherwise strip the alias and break re-export detection.
    "PLC0414",
    # PLR0402's autofix rewrites `import pkg.sub as sub` to `from pkg import
    # sub`, which is NOT equivalent here: the former guarantees the submodule,
    # the latter resolves via pkg/__init__ and makes pyright lose the
    # submodule's types (breaks squin/gemini attribute typing).
    "PLR0402",
]

[tool.ruff.lint.per-file-ignores]
# Dialect `_interface.py` frontends are declaration-only `@lowering.wraps`
# stubs: the `...` after the docstring is the (required) body, so the
# unnecessary-placeholder rule must not strip it.
"**/_interface.py" = ["PIE790"]
# Optional-cirq QASM->SQUIN benchmark utility: cirq must stay import-guarded so
# the module imports without the optional `sim` extra (TC004 would force a hard
# runtime import), and the QASM parser deliberately falls through on any parse
# failure to a compatibility parser (S110/BLE001).
"python/benchmarks/utils/qasm_to_squin_kernel.py" = ["TC004", "S110", "BLE001"]
# Demos and one-off scripts intentionally catch broadly to surface errors to the
# reader / stay robust; the shipped library (python/bloqade) still enforces
# BLE001.
"demo/**" = ["BLE001"]
"scripts/**" = ["BLE001"]

[tool.coverage.run]
include = ["python/bloqade/*"]

[tool.coverage.report]
exclude_also = [
    '@overload',
    '@_wraps'
]

[tool.pytest.ini_options]
testpaths = "python/tests/"
markers = [
    "msd_numerical_regression: optional long-running, environment-specific MSD numerical regression",
]
