[package]
name = "bloqade-lanes-bytecode-cli"
version.workspace = true
edition = "2024"

[lib]
name = "bloqade_lanes_bytecode"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "bloqade-bytecode"
path = "src/main.rs"

[dependencies]
bloqade-lanes-bytecode-core = { path = "../bloqade-lanes-bytecode-core" }
bloqade-lanes-search = { path = "../bloqade-lanes-search" }
bloqade-lanes-dsl-core = { path = "../bloqade-lanes-dsl-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
