[package]
name = "bloqade-lanes-bytecode-core"
version.workspace = true
edition = "2024"

[lib]
name = "bloqade_lanes_bytecode_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# vihaco-backed ISA (migration of the bytecode onto the vihaco framework, #769)
vihaco = { workspace = true }
vihaco-parser = { workspace = true }
vihaco-parser-core = { workspace = true }
chumsky = { workspace = true }
eyre = { workspace = true }
