[package]
name = "bloqade-lanes-dsl-core"
version.workspace = true
edition = "2024"

[lib]
name = "bloqade_lanes_dsl_core"

[dependencies]
bloqade-lanes-bytecode-core = { path = "../bloqade-lanes-bytecode-core" }
starlark = "0.13"
allocative = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
