[package]
name = "bloqade-lanes-dsl-core"
version.workspace = true
edition = "2024"

[lib]
name = "bloqade_lanes_dsl_core"

[dependencies]
bloqade-lanes-bytecode-core = { path = "../bloqade-lanes-bytecode-core" }
starlark = "0.13"
# Pinned to =0.3.4 — see crates/bloqade-lanes-search/Cargo.toml for the
# starlark_map / hashbrown rationale. Both crates must use the same
# allocative version or the resolver hits the same impl-mismatch.
allocative = "=0.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
