[package]
name = "bloqade-lanes-search"
version.workspace = true
edition = "2024"

[lib]
name = "bloqade_lanes_search"

[dependencies]
bloqade-lanes-bytecode-core = { path = "../bloqade-lanes-bytecode-core" }
bloqade-lanes-dsl-core = { path = "../bloqade-lanes-dsl-core" }
rand = { version = "0.9", features = ["small_rng"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
allocative = "0.3"
starlark = "0.13"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
